 - Check UMFPACK return argument for warnings/errors
0.7.1 [2007-08-31]
 - Integrate FFC form language into PyDOLFIN
 - Just-in-time (JIT) compilation of variational forms
 - Conversion from from Diffpack grid format to DOLFIN XML
 - Name change: BoundaryCondition --> DirichletBC
 - Add support for periodic boundary conditions: class PeriodicBC
 - Redesign default linear algebra interface (Matrix, Vector, KrylovSolver, etc)
 - Add function to return Vector associated with a DiscreteFunction
0.7.0-1 [2007-06-22]
 - Recompile all forms with latest FFC release
 - Remove typedefs SparseMatrix and SparseVector
 - Fix includes in LinearPDE
 - Rename DofMaps -> DofMapSet
0.7.0 [2007-06-20]
 - Move to UFC interface for code generation
 - Major rewrite, restructure, cleanup
 - Add support for Brezzi-Douglas-Marini (BDM) elements
 - Add support for Raviart-Thomas (RT) elements
 - Add support for Discontinuous Galerkin (DG) methods
 - Add support for mesh partitioning (through SCOTCH)
 - Handle both UMFPACK and UFSPARSE
 - Local mesh refinement
 - Mesh smoothing
 - Built-in plotting (through Viper)
 - Cleanup log system
 - Numerous fixes for mesh, in particular MeshFunction
 - Much improved Python bindings for mesh
 - Fix Python interface for vertex and cell maps in boundary computation
0.6.4 [2006-12-01]
 - Switch from Python Numeric to Python NumPy
 - Improved mesh Python bindings
 - Add input/output support for MeshFunction
 - Change Mesh::vertices() --> Mesh::coordinates()
 - Fix bug in output of mesh to MATLAB format
 - Add plasticty module (experimental)
 - Fix configure test for Python dev (patch from Åsmund Ødegård)
 - Add mesh benchmark
 - Fix memory leak in mesh (data not deleted correctly in MeshTopology)
 - Fix detection of curses libraries
 - Remove Tecplot output format
0.6.3 [2006-10-27]
 - Move to new mesh library
 - Remove dolfin-config and move to pkg-config
 - Remove unused classes PArray, PList, Table, Tensor	